src/app/global-transfer-info/global-transfer-info.component.scss
.global-transfer-info-container {
  height: 100vh;
  width: 220px;

  .data-container {
    height: 100vh;
    overflow-y: auto;

    display: flex;
    flex-direction: column;

    border-radius: 0;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;

    padding: 0;

    mat-divider.spaced {
      margin: 5px 0;
    }

    #qbittorrent_name {
      background: #1976D2;
      color: white;

      height: 64px;
      margin-bottom: 0;
    }

    #toggle_alt_limit {
      h4 {
        margin: 0 0 0 5px;
        font-size: 10pt;
      }
    }

    section {
      padding: 10px;

      h2 {
        font-weight: 400;
      }
    }

    #disk_summary, #global_transfer {
      display: flex;
      flex-direction: column;

      width: 100%;
    }
  }
}

.dark-theme {
  .data-container {
    #qbittorrent_name {
      background: #212121;
    }
  }
}

.row {
  display: flex;
  flex-direction: row;

  margin: 5px 0;
}

h3 {
    font-size: 11pt;
    margin: 0;
}

h4 {
    font-size: 10pt;
    margin: 0 5px 0 5px;
}

mat-chip {
  border-radius: 10px;
  width: 100%;
}

#summaryContent {
  mat-chip {
    background: rgba(0, 0, 0, 0.08);
  
    h4 {
      font-size: 10pt;
      margin: 0 0 0 5px;
    }
  }
}

#filter_torrents {
  h3 {
    font-size: 11pt;
    margin-bottom: 0;
  }

  mat-chip {
    color: black;

    border-radius: 0;
    cursor: pointer;

    background: none;

    border: solid 2px;
    border-color:rgba(0, 0, 0, 0.07);

    h4 {
      font-size: 10pt;
      margin: 0 0 0 5px;
    }

    &.mat-chip-selected {
      background: rgb(224, 224, 224);
    }
  }
}

.dark-theme {
  #summaryContent {
    mat-chip {
      background: rgba(97, 97, 97, 0.5);
    }
  }

  #filter_torrents {
    mat-chip {
      color: white;
      border-color: rgba(97, 97, 97, 0.5);

      &.mat-chip-selected {
        background: rgb(97, 97, 97);
      }
    }
  }
}

